# wrat

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/wrat/common/: types.h
include/wrat/geometric_primitives/: box.h  geometric_primitive_base.h
src/geometric_primitives/: geometric_primitive_base.cpp
